--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,11 @@ services:
     environment:
       - LETSENCRYPT_HOST=exoplanets.jstet.net
       - VIRTUAL_HOST=exoplanets.jstet.net
-    restart: always
+    restart: unless-stopped
     networks:
-    - nginx-proxy_proxy
+    - proxy
     - default
 networks:
-  nginx-proxy_proxy:
+  proxy:
     external: true
 
