--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,12 @@ jobs:
       with:
         host: ${{ secrets.HOST }}
         USERNAME: ${{ secrets.USERNAME }}
-        PORT: ${{ secrets.PORT }}
-        KEY: ${{ secrets.SSHKEY }}
-        script: cd Exoplanets/ && git reset --hard && git pull origin main && docker compose up --build -d
+        KEY: ${{ secrets.SSHKEY }}d
+        script: |
+          cd Exoplanets
+          git reset --hard
+          git pull origin main
+          docker build --no-cache -t localhost:5000/exoplanets .
+          docker push localhost:5000/exoplanets
+          cd ../compose_exoplanets
+          docker stack deploy -c docker-compose.yml exoplanets
